desktop layout added

--- a/worksheet4.html
+++ b/worksheet4.html
@@ -2,33 +2,40 @@
 <meta charset="UTF-8">
 <title>Seasonal Greetings</title>
 <link rel="stylesheet" href="worksheet4.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
     <article>
         <h1>Season's Greetings</h1>
         <section>
-            <h2>2020</h2>
-            <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
-            <p>What could possibly go wrong next year?</p>
-            <img src="http://placekitten.com/400/200" alt="placekitten">
-            <img src="http://placekitten.com/500/300" alt="placekitten">
-            <img src="http://placekitten.com/300/400" alt="placekitten">
+            <div>
+                <h2>2020</h2>
+                <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
+                <p>What could possibly go wrong next year?</p>
+                <img class="portrait" src="http://placekitten.com/800/500" alt="placekitten">
+                <img class="portrait" src="http://placekitten.com/800/500" alt="placekitten">
+                <img src="http://placekitten.com/500/800" alt="placekitten">
+            </div>
         </section>
         <section>
-            <h2>2021</h2>
-            <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
-            <p>What could possibly go wrong next year?</p>
-            <img src="http://placekitten.com/500/250" alt="placekitten">
-            <img src="http://placekitten.com/500/500" alt="placekitten">
-            <img src="http://placekitten.com/400/200" alt="placekitten">
+            <div>
+                <h2>2021</h2>
+                <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
+                <p>What could possibly go wrong next year?</p>
+                <img src="http://placekitten.com/800/500" alt="placekitten">
+                <img class="portrait" src="http://placekitten.com/800/800" alt="placekitten">
+                <img class="portrait" src="http://placekitten.com/800/500" alt="placekitten">
+            </div>
         </section>
         <section>
-            <h2>2022</h2>
-            <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
-            <p>What could possibly go wrong next year?</p>
-            <img src="http://placekitten.com/400/200" alt="placekitten">
-            <img src="http://placekitten.com/400/200" alt="placekitten">
-            <img src="http://placekitten.com/400/200" alt="placekitten">
+            <div>
+                <h2>2022</h2>
+                <p>Hello, 2020 has been an interesting challenge of a year, so instead of a picture of me(and my family), here is a collection of dogs!</p>
+                <p>What could possibly go wrong next year?</p>
+                <img src="http://placekitten.com/800/500" alt="placekitten">
+                <img class="portrait" src="http://placekitten.com/800/500" alt="placekitten">
+                <img class="portrait" src="http://placekitten.com/800/500" alt="placekitten">
+            </div>
         </section>
     </article>
 </body>
