--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
     <article>
-        <h1>Season's Greetings</h1>
+        <h1>Season's Greetings!</h1>
         <section>
             <div>
                 <h2>2020</h2>
